--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,22 +22,33 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
                 <li><a href="{{ site.baseurl }}/">Home</a></li>
-                <li><a href="{{ site.baseurl }}/work">About</a></li>
                 <li>
                 <div class="dropdown">
                   <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                    BTIC
+                    Products
                     <span class="caret"></span>
                   </button>
                   <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                    <li><a href="{{ site.baseurl }}/btic#btic">What is it?</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a href="{{ site.baseurl }}/btic#btic-sp500">BTIC-S&P500</a></li>
-                    <li><a href="{{ site.baseurl }}/btic#btic-kospi">BTIC-KOSPI</a></li>
+                    <li><a href="{{ site.baseurl }}/products#firm_description">Firm Description</a></li>
+                    <li><a href="{{ site.baseurl }}/products#firm_selection">Firm Selection</a></li>
+                    <li><a href="{{ site.baseurl }}/products#industry_classification">Industry Classification</a></li>
                   </ul>
                 </div>
                 </li>
-                <li><a href="{{ site.baseurl }}/wbfs">WBFS</a></li>
+                <li>
+                <div class="dropdown">
+                  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                    Technology
+                    <span class="caret"></span>
+                  </button>
+                  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                    <li><a href="{{ site.baseurl }}/technology#data">Data</a></li>
+                    <li><a href="{{ site.baseurl }}/technology#document_embedding">Document Embedding</a></li>
+                    <li><a href="{{ site.baseurl }}/technology#papers">Papers</a></li>
+                  </ul>
+                </div>
+                </li>
+                <li><a href="{{ site.baseurl }}/work">About</a></li>
                 <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
