FIN-1-3 almost recovered

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,11 +5,10 @@
       <div class="col-md-12">
         <div class="footer-manu">
           <ul>
+            <li><a href="{{ site.baseurl }}/products">Products</a></li>
+            <li><a href="{{ site.baseurl }}/technology">Technology</a></li>
             <li><a href="{{ site.baseurl }}/work">About</a></li>
             <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
-            <li><a href="{{ site.baseurl }}/btic">BTIC</a></li>
-            <li><a href="{{ site.baseurl }}/wbfs">WBFS</a></li>
-            <li><a href="#">Terms</a></li>
           </ul>
         </div>
         <p>Copyright &copy; Design &amp; Developed by <a href="http://www.themefisher.com">Themefisher</a>. All rights reserved.</p>
