--- a/_includes/header.html
+++ b/_includes/header.html
@@ -32,6 +32,7 @@
                     <li><a href="{{ site.baseurl }}/products#firm_description">Firm Description</a></li>
                     <li><a href="{{ site.baseurl }}/products#firm_selection">Firm Selection</a></li>
                     <li><a href="{{ site.baseurl }}/products#industry_classification">Industry Classification</a></li>
+                    <li><a href="{{ site.baseurl }}/products#news_curation">News Curation</a></li>
                   </ul>
                 </div>
                 </li>
