Fixed the order of product list

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -32,8 +32,8 @@
                     <li><a href="{{ site.baseurl }}/products#firm_description">Firm Description</a></li>
                     <li><a href="{{ site.baseurl }}/products#firm_selection">Firm Selection</a></li>
                     <li><a href="{{ site.baseurl }}/products#industry_classification">Industry Classification</a></li>
+                    <li><a href="https://jindepot.github.io/DIC_Network/">Industry Network</a></li>
                     <li><a href="{{ site.baseurl }}/products#news_curation">News Curation</a></li>
-                    <li><a href="https://jindepot.github.io/DIC_Network/">DIC Firm Network</a></li>
                   </ul>
                 </div>
                 </li>
